--- a/AndroidStudioProjects/MyApplication/app/src/main/AndroidManifest.xml
+++ b/AndroidStudioProjects/MyApplication/app/src/main/AndroidManifest.xml
@@ -10,8 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:name=".BucketListActivity"
+            android:label="UVa Bucket List"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,6 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".AddItemActivity"></activity>
     </application>
 
 </manifest>
